# red-candle

./: .gitignore  CLAUDE.md  LICENSE  README.md  Rakefile  candle.gemspec  test_custom_tokenizers.rb
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
docs/: HUGGINGFACE.md  MIGRATING_TO_2.0.md  MODEL_SUPPORT.md  PRECOMPILED_GEMS.md
examples/: agent.rb  gemma_example.rb  ner_search_extraction.rb  qwen_example.rb  reranker_comparison.rb  smoke_test.rb  smoke_test.sh  smoke_test_core.rb  smoke_test_embedding.rb  smoke_test_helper.rb  smoke_test_llm.rb  smoke_test_ner.rb  smoke_test_reranker.rb  smoke_test_structured.rb  smoke_test_tokenizer.rb  smoke_test_tools.rb  smoke_test_vlm.rb  tool_calling.rb
ext/candle/: Cargo.toml
ext/candle/src/: gvl.rs  lib.rs
ext/candle/src/llm/: constrained_generation_test.rs  gemma.rs  glm4.rs  granite.rs  granitemoehybrid.rs  llama.rs  mistral.rs  mod.rs  phi.rs  quantized_gguf.rs  qwen.rs  qwen3.rs  text_generation.rs
ext/candle/src/ruby/: embedding_model.rs  llm.rs  mod.rs  ner.rs  reranker.rs  structured.rs  utils.rs  vlm.rs
lib/: candle.rb
lib/candle/: agent.rb  build_info.rb  chat_response.rb  device_utils.rb  embedding_model.rb  embedding_model_type.rb  llm.rb  logger.rb  ner.rb  stream_processor.rb  thinking_parser.rb  tool.rb  tool_call_parser.rb  version.rb  vlm.rb
spec/: agent_spec.rb  cache_dir_spec.rb  chat_response_spec.rb  chat_template_spec.rb  embedding_model_types_spec.rb  gvl_release_spec.rb  llm_chat_spec.rb  llm_metadata_spec.rb  require_spec.rb  reranker_spec.rb  spec_helper.rb  stream_processor_spec.rb  structured_generation_spec.rb  thinking_parser_spec.rb  tool_call_parser_spec.rb  tool_spec.rb
spec/llm/: custom_tokenizer_practical_spec.rb  custom_tokenizer_spec.rb  gemma_spec.rb  mistral_spec.rb  qwen_spec.rb
spec/support/: llama_shared_examples.rb  model_cache.rb
