[package]
name = "candle"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version = "1.85"

[lib]
crate-type = ["cdylib"]

[dependencies]
candle-core = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
tokenizers = { version = "0.22.0", default-features = true, features = ["fancy-regex"] }
# Drop hf-hub's default `default-tls` (= native-tls = openssl-sys), which can't
# cross-compile to aarch64-linux (no OpenSSL headers in the cross sysroot). Keep
# both API surfaces red-candle uses — `tokio` (async, via reqwest) and `ureq`
# (sync) — and route reqwest through rustls (`rustls-tls`); ureq defaults to
# rustls+ring. This removes openssl-sys from every platform's build.
hf-hub = { version = "0.4.1", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
half = "2.6.0"
magnus = "0.8"
safetensors = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["rt", "macros"] }
rand = "0.10"
outlines-core = "0.2.11"
image = "0.25"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn", "cuda"]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]